Made config.edn be a conffile so I don't accidentally overwrite it

--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,6 @@ task packDeb(type: Deb, dependsOn: uberjar) {
     from("pkg_files/") {
         into("/")
     }
+
+    configurationFile = "/opt/board-games-poll/config.edn"
 }
